refactor: Sonar remainder sweep (S6213/S1659/S1640/S125/S108/S1168/S112/S127)
Targeted Sonar issues across config, engine, rules, and tests:

- S6213: rename `record` (restricted identifier) to `row`
- S1659: split multi-var declarations (Numerals, RangeFiller, StripSeparators,
  VideoCodecExtractor, ReleaseGroupExtractor)
- S1640: HashMap<MatchName,...> -> EnumMap (RemoveAmbiguous, PreferLastPath)
- S125 : drop duplicate comment block in SourceExtractor
- S108 : annotate intentionally-empty blocks (DatePatterns, ScreenSize,
  Canonical, YmlTestLoader)
- S1168: empty Map/List instead of null + simplify callers (ConfigLoader,
  ConfigPatternHelpers, OtherExtractor, TitleExtractor)
- S112 : RuntimeException -> IllegalStateException (WebsiteExtractor)
- S127 : drop in-body i++ in extractTwoWordLanguages; use pairConsumed
  contains-check at loop top

IntelliJ auto-cleanup on edited files removed redundant
`import io.guessit.engine.MatchName;` (covered by `engine.*` wildcard) across
many files, dropped a stray empty statement in LanguageRegistryTest, and made
several CLI/ParseContext fields final where never reassigned.

Skipped: S1104 (public mutable fields are an intentional pipeline contract),
S106 (CLI legitimately writes stdout/stderr), S107 (would require DTOs),
S5843/S5850/S6916/S6880/S4276/S6548/S1075 (false-positive or readability
cost > benefit), S135 (59 sites; break/continue removal often hurts the
parser).

Tests: 2537/2537 pass; YML parity preserved.